2009-11-27  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (assuan_set_assuan_log_stream): Add prototype.
	* libassuan.def, libassuan.vers: Add back
	assuan_set_assuan_log_stream.
	* assuan-logging.c (assuan_set_assuan_log_stream): Add back.
	* context.c (assuan_get_pointer): Don't output debug info here.
	(assuan_get_peercred, assuan_get_pid): But do here.
	* system.c: Improve debug output.
	* assuan-defs.h (struct assuan_context_s): Rename pipe_mode to
	max_accepts.
	* assuan-listen.c (assuan_accept): Rework max accepts logic.
	* assuan-socket-server.c (assuan_init_socket_server),
	assuan-socket-connect.c (assuan_socket_connect),
	assuan-pipe-server.c (assuan_init_pipe_server),
	assuan-pipe-connect.c (socketpair_connect): Add debug output, set
	max_accepts instead of pipe_mode.

2009-11-25  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (assuan_init_pipe_server): Change type of filedes to
	assuan_fd_t.
	(assuan_fdopen): New prototype.
	* libassuan.vers, libassuan.def: Add assuan_fdopen.
	* system.c (assuan_fdopen): New function.
	* assuan-pipe-server.c (assuan_init_pipe_server): Change type of
	filedes to assuan_fd_t.  No longer translate fd to handle.  Don't
	set to binary either (that doesn't do anything for handles, it
	only affects the libc fd).

2009-11-24  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (struct _assuan_peercred) [_WIN32]: Define dummy member
	so struct is not empty.
	* assuan-socket.c (assuan_sock_deinit): Set sock_ctx to NULL.

2009-11-19  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (common_sources): Remove assuan-connect.c and add
	client.c.
	* client.c, server.c: New file.
	* assuan-defs.h (_assuan_disconnect): Remove.
	(struct assuan_context_s): Remove members deinit_handler.
	(_assuan_client_release, _assuan_client_finish)
	(_assuan_server_finish, _assuan_server_release): New.
	* assuan-socket-server.c (accept_connection_bottom): Use
	ASSUAN_INVALID_PID, not -1.
	(finish_connection, deinit_socket_server): Remove.